<resources>
    <string name="app_name">Redmine Sweeper</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="user_name_label">%1$s %2$s</string>

    <string name="created_info_label">%1$s is created on %2$s</string>

    <string name="now_loading_label">now loading...</string>

    <string name="date_format">yyyy/MM/dd</string>

    <string name="label_filter_queries">Custom queries</string>

    <string name="label_filter_trackers">Trackers</string>

    <string name="filter_open">Open</string>

    <string name="filter_close">Close</string>

    <string name="filter_all">All</string>

    <string name="filter_watch">Watching</string>

    <string name="account_settings_title">Redmine Account Settings</string>

    <string name="hint_url_text">http://example.com/redmine</string>

    <string name="hint_login_id_text">Login ID</string>

    <string name="hint_password_text">Password</string>

    <string name="hint_password_save_check">You want to save the password</string>

    <string name="label_button_sign_in">sign in</string>

    <string name="label_button_update">update</string>

    <string name="label_button_delete">delete</string>

    <string name="label_start_redmine_sweeper">Let\'s start Redmine Sweeper</string>

    <string name="label_start_redmine_sweeper_sub">Redmine Sweeper is a simple Redmine client.\nPlease set the account First.</string>

    <string name="label_no_tickets">No tickets</string>

    <string name="label_invalid_query">Invalid custom query</string>

    <string name="label_list_add_account">Add account</string>

    <string name="dialog_msg_dialog_auth">It is running an authentication process</string>

    <string name="dialog_button_ok">OK</string>

    <string name="dialog_button_cancel">CANCEL</string>

    <string name="dialog_title_rms_finish">No authentication is complete</string>

    <string name="dialog_msg_rms_finish">Are you sure you want to exit the Redmine Sweeper?</string>

    <string name="dialog_title_delete_account">Account deletion confirmation</string>

    <string name="dialog_msg_delete_account">Are you sure you want to delete this account?</string>

    <string name="label_msg_error_network">Network is invalid.</string>

    <string name="label_msg_error_rest_timeout">Connection timed out.</string>

    <string name="label_msg_error_page_not_found">Page could not be found.</string>

    <string name="label_msg_error_auth_failed">It failed authentication.</string>

    <string name="label_msg_error_rest_failed">It failed to connect.</string>

    <string name="label_msg_error_retry">Please tap here if you want to retry.</string>

    <string name="label_assigned_to">assigned to</string>

    <string name="label_start_date">start date</string>

    <string name="label_priority">priority</string>

    <string name="label_status">status</string>

    <string name="label_done_ratio">done ratio</string>

</resources>
