<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_standard"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_standard"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_web_grey600_24dp" />

                <EditText
                    android:id="@+id/url_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_url_text"
                    android:inputType="textUri"
                    android:textColor="@color/text_standard"
                    android:textColorHint="@color/text_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_account_circle_grey600_24dp" />

                <EditText
                    android:id="@+id/login_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_login_id_text"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text_standard"
                    android:textColorHint="@color/text_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_key_grey600_24dp" />

                <EditText
                    android:id="@+id/password_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password_text"
                    android:inputType="textPassword"
                    android:textColor="@color/text_standard"
                    android:textColorHint="@color/text_hint" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/save_password_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:checked="true"
                android:text="@string/hint_password_save_check"
                android:textColor="@color/text_standard" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:text="@string/label_button_sign_in"
                android:textColor="@color/label_button"
                android:textSize="12dp" />

            <LinearLayout
                android:id="@+id/edit_button_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/delete_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:text="@string/label_button_delete"
                    android:textColor="@color/label_button"
                    android:textSize="12dp" />

                <Button
                    android:id="@+id/update_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/label_button_update"
                    android:textColor="@color/label_button"
                    android:textSize="12dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
