<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/base_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_standard"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/tracker_0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/subject_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXX"
                        android:textColor="@color/text_reversal"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/project_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="XXXXXXXXXXXXXXXXXXXXXXX"
                        android:textAlignment="center"
                        android:textColor="@color/text_reversal"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/created_info_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="8dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/created_info_label"
                        android:textAlignment="center"
                        android:textColor="@color/text_reversal"
                        android:textSize="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/label_assigned_to"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/assigned_to_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/label_start_date"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/start_date_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/label_priority"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/priority_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/label_status"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/status_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="72dp"
                        android:layout_height="match_parent"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/label_done_ratio"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                    <ProgressBar
                        android:id="@+id/done_ratio_bar"
                        style="?android:progressBarStyleHorizontal"
                        android:layout_width="150dp"
                        android:layout_height="8dp"
                        android:layout_gravity="center"
                        android:max="100"
                        android:progressDrawable="@drawable/pg_done_ratio" />

                    <TextView
                        android:id="@+id/done_ratio_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/text_standard"
                        android:textSize="12dp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="8dp"
                    android:background="@color/line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX"
                        android:textColor="@color/text_standard"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>
